Donate all content section done

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,18 +7,27 @@
     <!-- google-fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"/>
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Daisy & Tailwind -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="font-[Poppins]" >
-    <header class=" backdrop-opacity-55 backdrop-filter backdrop-blur-2xl ">
+  <body class="font-[Poppins]">
+    <header class="backdrop-opacity-55 backdrop-filter backdrop-blur-2xl">
       <nav class="bg-yellow-50 py-7">
-        <div class="w-11/12 mx-auto flex items-center justify-between">
+        <div
+          class="w-11/12 mx-auto lg:w-10/12 flex items-center justify-between"
+        >
           <a
             href="./blog.html"
-            class="py-2 px-5 rounded-lg bg-lime-400 hover:bg-lime-300 transition-colors font-semibold"
+            class="py-2 px-5 rounded-lg text-lg bg-lime-400 hover:bg-lime-300 transition-colors font-semibold"
             >Blog</a
           >
           <div class="hidden sm:visible sm:flex items-center gap-3">
@@ -33,13 +42,160 @@
         </div>
       </nav>
       <div>
-        <div class="flex items-center justify-center gap-4 w-11/12 mx-auto py-10">
-            <button class="py-3 px-5 font-semibold rounded-lg border border-lime-400 bg-lime-400">Donation</button>
-            <button class="py-3 px-5 font-semibold hover:bg-gray-300 rounded-lg border border-lime-400">History</button>
+        <div
+          class="flex items-center justify-center gap-4 w-11/12 mx-auto py-10"
+        >
+          <button
+            class="py-3 px-5 font-semibold rounded-lg border border-lime-400 bg-lime-400"
+          >
+            Donation
+          </button>
+          <button
+            class="py-3 px-5 font-semibold hover:bg-gray-300 transition-colors rounded-lg border border-lime-400"
+          >
+            History
+          </button>
         </div>
       </div>
     </header>
+    <main>
+      <section>
+        <div class="w-11/12 lg:w-10/12 mx-auto border rounded-lg">
+          <div class="p-5 flex items-center flex-col gap-4 lg:flex-row">
+            <div class="flex-1">
+              <img src="./assets/noakhali.png" alt="noakhali-photo" />
+            </div>
+            <div class="flex-1">
+              <div
+                class="py-2 rounded-lg w-32 flex items-center justify-center gap-1 bg-gray-200"
+              >
+                <img src="./assets/coin.png" alt="coin_photo" />
+                <span id="">400</span>
+                <span>BDT</span>
+              </div>
+              <h2 class="text-2xl font-semibold my-3">
+                Donate for Flood at Noakhali, Bangladesh
+              </h2>
+              <p class="text-lg mb-3">
+                The recent floods in Noakhali have caused significant damage to
+                homes infrastructure. Your donation will help provide essential
+                supplies and to those affected by this disaster. Every
+                contribution, big or small, makes difference. Please join us in
+                supporting the relief efforts and making a positive impact on
+                the lives of those in need.
+              </p>
+              <div>
+                <input
+                  type="text"
+                  id=""
+                  placeholder="Write Donation Amount"
+                  class="py-3 border px-3 rounded-lg w-full focus:outline-lime-300 my-4"
+                />
+              </div>
+              <div>
+                <button
+                  class="w-full bg-lime-400 hover:bg-lime-300 transition-colors font-semibold rounded-lg py-3"
+                >
+                  Donate Now
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
+
+      <section class="py-8">
+        <div class="w-11/12 lg:w-10/12 mx-auto border rounded-lg">
+          <div class="p-5 flex items-center flex-col gap-4 lg:flex-row">
+            <div class="flex-1">
+              <img src="./assets/feni.png" alt="feni.png" />
+            </div>
+            <div class="flex-1">
+              <div
+                class="py-2 rounded-lg w-32 flex items-center justify-center gap-1 bg-gray-200"
+              >
+                <img src="./assets/coin.png" alt="coin_photo" />
+                <span id="">400</span>
+                <span>BDT</span>
+              </div>
+              <h2 class="text-2xl font-semibold my-3">
+                Donate for Flood Relief in Feni, Bangladesh
+              </h2>
+              <p class="text-lg mb-3">
+                The recent floods in Noakhali have caused significant damage to
+                homes infrastructure. Your donation will help provide essential
+                supplies and to those affected by this disaster. Every
+                contribution, big or small, makes difference. Please join us in
+                supporting the relief efforts and making a positive impact on
+                the lives of those in need.
+              </p>
+              <div>
+                <input
+                  type="text"
+                  id=""
+                  placeholder="Write Donation Amount"
+                  class="py-3 border px-3 rounded-lg w-full focus:outline-lime-300 my-4"
+                />
+              </div>
+              <div>
+                <button
+                  class="w-full bg-lime-400 hover:bg-lime-300 transition-colors font-semibold rounded-lg py-3"
+                >
+                  Donate Now
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+      <section class="pb-10">
+        <div class="w-11/12 lg:w-10/12 mx-auto border rounded-lg">
+          <div class="p-5 flex items-center flex-col gap-4 lg:flex-row">
+            <div class="flex-1">
+              <img src="./assets/quota-protest.png" alt="quota-protest_photo" />
+            </div>
+            <div class="flex-1">
+              <div
+                class="py-2 rounded-lg w-32 flex items-center justify-center gap-1 bg-gray-200"
+              >
+                <img src="./assets/coin.png" alt="coin_photo" />
+                <span id="">400</span>
+                <span>BDT</span>
+              </div>
+              <h2 class="text-2xl font-semibold my-3">
+                Aid for Injured in the Quoata Movement
+              </h2>
+              <p class="text-lg mb-3">
+                The recent floods in Noakhali have caused significant damage to
+                homes infrastructure. Your donation will help provide essential
+                supplies and to those affected by this disaster. Every
+                contribution, big or small, makes difference. Please join us in
+                supporting the relief efforts and making a positive impact on
+                the lives of those in need.
+              </p>
+              <div>
+                <input
+                  type="text"
+                  id=""
+                  placeholder="Write Donation Amount"
+                  class="py-3 border px-3 rounded-lg w-full focus:outline-lime-300 my-4"
+                />
+              </div>
+              <div>
+                <button
+                  class="w-full bg-lime-400 hover:bg-lime-300 transition-colors font-semibold rounded-lg py-3"
+                >
+                  Donate Now
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <script src="./main.js"></script>
   </body>
 </html>
