Donation button event handler completed

--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="font-[Poppins]">
-    <header class="backdrop-opacity-55 backdrop-filter backdrop-blur-2xl">
+    <header class="backdrop-filter backdrop-blur-lg sticky top-0 z-50">
         <nav class="bg-yellow-50 py-7">
           <div
             class="w-11/12 mx-auto lg:w-10/12 flex items-center justify-between"
