--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
           <div class="flex items-center gap-2">
             <img src="./assets/coin.png" alt="coin_photo" />
-            <span id="top-balance" class="text-lg">4500</span>
+            <span id="top-balance" class="text-lg font-semibold">6500</span>
             <span class="text-lg font-semibold">BDT</span>
           </div>
         </div>
@@ -95,7 +95,9 @@
                   class="py-3 border px-3 rounded-lg w-full focus:outline-lime-300 mb-1"
                 />
                 <div id="error" class="hidden">
-                  <p class="text-red-500 text-sm font-semibold">⚠️ Input valid Amount</p>
+                  <p class="text-red-500 text-sm font-semibold">
+                    ⚠️ Input valid Amount
+                  </p>
                 </div>
               </div>
               <div>
@@ -163,7 +165,9 @@
                   class="py-3 border px-3 rounded-lg w-full focus:outline-lime-300 mb-1"
                 />
                 <div id="error-2" class="hidden">
-                  <p class="text-red-500 text-sm font-semibold">⚠️ Input valid Amount</p>
+                  <p class="text-red-500 text-sm font-semibold">
+                    ⚠️ Input valid Amount
+                  </p>
                 </div>
               </div>
               <div>
@@ -231,7 +235,9 @@
                   class="py-3 border px-3 rounded-lg w-full focus:outline-lime-300 mb-1"
                 />
                 <div id="error-3" class="hidden">
-                  <p class="text-red-500 text-sm font-semibold">⚠️ Input valid Amount</p>
+                  <p class="text-red-500 text-sm font-semibold">
+                    ⚠️ Input valid Amount
+                  </p>
                 </div>
               </div>
               <div>
