All functionality complete

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Donate Bangladesh</title>
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
     <!-- google-fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,9 +31,9 @@
             class="py-2 px-5 rounded-lg text-lg bg-lime-400 hover:bg-lime-300 transition-colors font-semibold"
             >Blog</a
           >
-          <div class="hidden sm:visible sm:flex items-center gap-3">
+          <div class="flex items-center gap-3">
             <img class="w-10" src="./assets/logo.png" alt="logo" />
-            <h3 class="text-xl font-bold">Donate Bangladesh</h3>
+            <h3 class="text-xl font-bold hidden sm:block">Donate Bangladesh</h3>
           </div>
           <div class="flex items-center gap-2">
             <img src="./assets/coin.png" alt="coin_photo" />
@@ -72,7 +73,7 @@
               <div
                 class="py-2 rounded-lg w-36 flex items-center justify-center gap-1 bg-gray-200"
               >
-                <img src="./assets/coin.png" alt="coin_photo" />
+                <img class="w-9 pr-1" src="./assets/cash.png" alt="donation" />
                 <span id="donate-balance">400</span>
                 <span>BDT</span>
               </div>
@@ -115,8 +116,8 @@
                 class="modal modal-bottom sm:modal-middle"
               >
                 <div class="modal-box flex flex-col items-center">
-                  <h3 class="text-3xl font-bold mb-3">Congrates!</h3>
-                  <img src="./assets/coin.png" alt="coin_photo" class="w-12" />
+                  <h3 class="text-3xl font-bold mb-4">Congrates!</h3>
+                  <img src="./assets/mobile-banking.png" alt="money-transfer" class="w-14" />
                   <p class="py-4">You Have Donated for Humankind</p>
                   <h4 class="text-xl font-bold">Successfully</h4>
                   <div class="modal-action">
@@ -142,7 +143,7 @@
               <div
                 class="py-2 rounded-lg w-36 flex items-center justify-center gap-1 bg-gray-200"
               >
-                <img src="./assets/coin.png" alt="coin_photo" />
+                <img class="w-9 pr-1" src="./assets/cash.png" alt="donation" />
                 <span id="donate-balance2">450</span>
                 <span>BDT</span>
               </div>
@@ -185,8 +186,8 @@
                 class="modal modal-bottom sm:modal-middle"
               >
                 <div class="modal-box flex flex-col items-center">
-                  <h3 class="text-3xl font-bold mb-3">Congrates!</h3>
-                  <img src="./assets/coin.png" alt="coin_photo" class="w-12" />
+                  <h3 class="text-3xl font-bold mb-4">Congrates!</h3>
+                  <img src="./assets/mobile-banking.png" alt="money-transfer" class="w-14" />
                   <p class="py-4">You Have Donated for Humankind</p>
                   <h4 class="text-xl font-bold">Successfully</h4>
                   <div class="modal-action">
@@ -212,7 +213,7 @@
               <div
                 class="py-2 rounded-lg w-36 flex items-center justify-center gap-1 bg-gray-200"
               >
-                <img src="./assets/coin.png" alt="coin_photo" />
+                <img class="w-9 pr-1" src="./assets/cash.png" alt="donation" />
                 <span id="donate-balance3">400</span>
                 <span>BDT</span>
               </div>
@@ -255,8 +256,8 @@
                 class="modal modal-bottom sm:modal-middle"
               >
                 <div class="modal-box flex flex-col items-center">
-                  <h3 class="text-3xl font-bold mb-3">Congrates!</h3>
-                  <img src="./assets/coin.png" alt="coin_photo" class="w-12" />
+                  <h3 class="text-3xl font-bold mb-4">Congrates!</h3>
+                  <img src="./assets/mobile-banking.png" alt="money-transfer" class="w-14" />
                   <p class="py-4">You Have Donated for Humankind</p>
                   <h4 class="text-xl font-bold">Successfully</h4>
                   <div class="modal-action">
