--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Donate Bangladesh</title>
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,10 +30,10 @@
             class="py-2 px-5 rounded-lg text-lg bg-lime-400 hover:bg-lime-300 transition-colors font-semibold"
             >Blog</a
           >
-          <div class="hidden sm:block">
+          <div>
             <a class="block sm:flex items-center gap-3" href="./index.html">
               <img class="w-10" src="./assets/logo.png" alt="logo" />
-            <h3 class="text-xl font-bold">Donate Bangladesh</h3>
+            <h3 class="text-xl font-bold hidden sm:block">Donate Bangladesh</h3>
             </a>
           </div>
           <div class="flex items-center gap-2">
